rework batching to personController save() method